modificato yaml per risolvere problemi di compilazione e corretto test getProjectById e getProjectByIdNotFound